[tool.poetry]
name = "timer-cli"
version = "0.1.0"
description = ""
authors = ["1Blademaster <kush.makkapati@icloud.com>"]
readme = "README.md"
packages = [{include = "timer_cli"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
