[tool.poetry]
name = "timer-cli"
version = "0.1.1"
description = "A simple CLI tool for starting a countdown timer."
license = "Apache-2.0"
authors = ["Kush Makkapati <kush.makkapati@icloud.com>"]
readme = "README.md"
repository = "https://github.com/1Blademaster/timer-cli"
packages = [{include = "timer"}]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^13.3.2"
art = "^5.9"
click = "^8.1.3"

[tool.poetry.scripts]
timer = "timer.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
